added backgroung image in Blog page

--- a/src/components/BlogCard/style.css
+++ b/src/components/BlogCard/style.css
@@ -6,6 +6,7 @@
   padding: 18px;
   border: 1px solid white;
   background-color: transparent;
+  backdrop-filter: blur(4px);
   cursor: pointer;
 }
 .card:hover {
