--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -2,8 +2,10 @@
   display: inline-block;
   font-family: "Pacifico", cursive;
   position: fixed;
-  font-size: 22px;
   font-weight: bold;
   top: 2rem;
   z-index: 3;
+}
+.logo-link {
+  text-decoration: none;
 }
