--- a/src/components/ContactLink/style.css
+++ b/src/components/ContactLink/style.css
@@ -2,11 +2,11 @@
   display: inline-block;
   color: white;
   position: fixed;
-  font-size: 14px;
+  font-size: calc(1em + 0.3vw);
   font-weight: normal;
   font-style: normal;
   top: 2rem;
   cursor: pointer;
-  right: 110px;
+  right: 6vw;
   z-index: 3;
 }
