Getting files ready for Deployment

--- a/src/components/BlogCard/style.css
+++ b/src/components/BlogCard/style.css
@@ -8,6 +8,7 @@
   background-color: transparent;
   backdrop-filter: blur(4px);
   cursor: pointer;
+  z-index: 99;
 }
 .card:hover {
   background-color: black;
