--- a/src/pages/HomePage/style.css
+++ b/src/pages/HomePage/style.css
@@ -1,7 +1,10 @@
+/*### -------WholePageBody-------- #*/
 .page {
   background-color: rgb(10, 10, 10);
   overflow: hidden;
 }
+
+/*## --------Navbar and Header-------- #*/
 .head-wrap {
   color: white;
   display: flex;
@@ -15,35 +18,23 @@
   gap: 15px;
   margin-top: -10px;
 }
-.intro {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  top: -70px;
-  left: 30px;
-  gap: 20px;
-}
-.resume-btn-wrap {
-  display: flex;
-  justify-content: flex-end;
-  padding: 10px;
-}
 
+/*## -----------Sections Container----------- #*/
 .container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 80vw;
+  max-width: 1240px;
   padding: 0 15px;
   align-items: center;
   margin: 0 auto;
   gap: 200px;
 }
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
   .container {
     max-width: 1140px;
   }
 }
-
 @media (min-width: 992px) {
   .container {
     max-width: 960px;
@@ -58,4 +49,38 @@
   .container {
     max-width: 540px;
   }
+} */
+
+/*# ------------IntroSection------------ #*/
+.intro {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 556px;
+  top: -70px;
+  left: 30px;
+  gap: 20px;
+}
+.resume-btn-wrap {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
+}
+.work {
+  display: flex;
+  flex-direction: column;
+  gap: 150px;
+  padding: 10px;
+}
+.projects-wrap {
+  display: flex;
+  flex-direction: column;
+  padding: 0 50px;
+  gap: 150px;
+}
+.about {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  gap: 170px;
 }
