--- a/src/pages/HomePage/style.css
+++ b/src/pages/HomePage/style.css
@@ -84,6 +84,20 @@
   flex-direction: column;
   gap: 170px;
 }
+.skills {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: 30px;
+  margin-top: 100px;
+}
+.skills article {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 50px;
+}
 .contact {
   margin-top: 100px;
   width: 100%;
