--- a/src/components/PageHeader/style.css
+++ b/src/components/PageHeader/style.css
@@ -2,9 +2,12 @@
   display: flex;
   flex-direction: column;
 }
+.text-area span {
+  overflow: hidden;
+}
 .text-area h1 {
   font-family: "panchang", sans-serif;
-  font-size: 100px;
+  font-size: 110px;
   line-height: 7.5rem;
   font-weight: 700;
 }
