--- a/src/components/WorkCard/style.css
+++ b/src/components/WorkCard/style.css
@@ -26,7 +26,7 @@
   padding: 1.5rem 2rem;
   background-color: #e0e0e0;
   cursor: pointer;
-  border-radius: 0 50px 0 50px;
+  /* border-radius: 0 50px 0 50px; */
 }
 .work-img img {
   position: absolute;
@@ -64,7 +64,7 @@
   background-color: black;
   padding: 9px 30px 9px 60px;
   width: 20%;
-  border-radius: 0 0 0 50px;
+  /* border-radius: 0 0 0 50px; */
   font-size: 18px;
   font-weight: 600;
   text-decoration: none;
