--- a/src/components/SkillsIntro/style.css
+++ b/src/components/SkillsIntro/style.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  left: 580px;
+  left: 45vw;
   overflow: hidden;
 }
 .marquee-w {
@@ -10,6 +10,7 @@
   display: block;
   width: 350px;
   height: 25px;
+  padding-right: 20px;
   overflow: hidden;
 }
 .marquee {
@@ -36,6 +37,34 @@
   height: 130px;
 }
 
+@media screen and (max-width: 770px) {
+  .arrow {
+    width: 80px;
+    height: 100px;
+  }
+  .marquee span {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 676px) {
+  .skill-intro {
+    margin-left: -120px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .skill-intro {
+    margin-left: -10px;
+    margin-top: 15px;
+    left: 0;
+  }
+  .arrow {
+    width: 70px;
+    height: 70px;
+  }
+  .marquee span {
+    font-size: 11px;
+  }
+}
 @keyframes marquee {
   0% {
     transform: translate(5%, 0);
