--- a/src/components/WorkCard/style.css
+++ b/src/components/WorkCard/style.css
@@ -11,11 +11,14 @@
 }
 .work-des {
   color: rgb(214, 214, 214);
-  font-size: 24px;
+  font-size: clamp(7px, 5px + 3vw, 24px);
   font-weight: 400;
   width: 50%;
   letter-spacing: 1px;
   line-height: 25px;
+}
+.width-card {
+  width: 50%;
 }
 .work-card {
   display: flex;
@@ -26,7 +29,6 @@
   padding: 1.5rem 2rem;
   background-color: #e0e0e0;
   cursor: pointer;
-  /* border-radius: 0 50px 0 50px; */
 }
 .work-img img {
   position: absolute;
@@ -62,15 +64,19 @@
 }
 .visit-btn {
   background-color: black;
-  padding: 9px 30px 9px 60px;
+  padding: 9px 50px;
   width: 20%;
-  /* border-radius: 0 0 0 50px; */
-  font-size: 18px;
+  font-size: clamp(12px, 8px + 0.8vw, 18px);
   font-weight: 600;
   text-decoration: none;
   color: white;
   transition: all 0.5s ease;
   letter-spacing: 2px;
+}
+.visit-btn h3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .visit-btn:hover {
   font-weight: 800;
@@ -85,5 +91,32 @@
   }
   100% {
     transform: translateY(-55%);
+  }
+}
+@media screen and (max-width: 720px) {
+  .work-card {
+    width: 100%;
+    height: 80%;
+    padding: 1rem 1.5rem;
+  }
+  .work-title {
+    font-size: 15px;
+  }
+  .visit-btn {
+    padding: 8px 20px 0px 20px;
+    font-size: 12px;
+    font-weight: 600;
+  }
+  .card-wrap {
+    flex-direction: column;
+  }
+  .work-des {
+    width: 100%;
+  }
+  .width-card {
+    width: 100%;
+  }
+  .work-img img {
+    display: none;
   }
 }
