--- a/src/pages/HomePage/style.css
+++ b/src/pages/HomePage/style.css
@@ -74,7 +74,13 @@
   margin-bottom: 30px;
   margin-top: 100px;
 }
-.skills .about article {
+.skills article {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 100px;
+}
+.about article {
   width: 100%;
   display: flex;
   justify-content: flex-end;
