--- a/src/components/SkillsBox/style.css
+++ b/src/components/SkillsBox/style.css
@@ -28,6 +28,7 @@
 @media screen and (max-width: 670px) {
   .skills-wrap {
     flex-wrap: wrap;
+    gap: 0;
   }
   .skills-colomn-wrap {
     margin-top: 40px;
