--- a/src/components/ContactEmail/style.css
+++ b/src/components/ContactEmail/style.css
@@ -55,3 +55,61 @@
   width: 115%;
   height: 450%;
 }
+@media screen and (max-width: 1100px) {
+  .contact-mail a {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 880px) {
+  .contact-mail a {
+    font-size: 20px;
+  }
+  .mail-text-wrap {
+    justify-content: flex-start;
+  }
+  .mail-text-wrap p {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 770px) {
+  .contact-wrap {
+    flex-direction: column;
+  }
+  .mail-text-wrap {
+    width: 100%;
+    justify-content: flex-start;
+  }
+  .mail-text-wrap p {
+    width: 90%;
+    font-size: 20px;
+    line-height: 27px;
+  }
+  .mail-wrap {
+    width: 100%;
+    justify-content: flex-start;
+  }
+  .contact-mail a {
+    font-size: 24px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .contact-wrap {
+    flex-direction: column;
+  }
+  .mail-text-wrap {
+    width: 100%;
+    justify-content: flex-start;
+  }
+  .mail-text-wrap p {
+    width: 90%;
+    font-size: 15px;
+    line-height: 17px;
+  }
+  .mail-wrap {
+    width: 100%;
+    justify-content: flex-start;
+  }
+  .contact-mail a {
+    font-size: clamp(12px, 9px + 1.3vw, 20px);
+  }
+}
